--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,1 +1,9 @@
-
+pipeline {
+  agent any
+  stages {
+    stage('Build')
+    steps {
+      sh 'python -m py_compile sources/add2vals.py sources/calc.py'
+    } 
+  }
+}
