--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,5 +6,10 @@ pipeline {
         sh 'python -m py_compile sources/add2vals.py sources/calc.py'
       }
     }
+    stage('Test'){
+      steps {
+        'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
+      }
+    }
   }
 }
