--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,5 +16,15 @@ pipeline {
         }
       }
     }
+    stage('Deploy') {
+        steps {
+            sh 'pyinstaller --onefile sources/add2vals.py'
+        }
+        post {
+            success {
+                archiveArtifacts artifacts: 'dist/add2vals'
+            }
+        }
+    }
   }
 }
